--- a/src/main/resources/com/shogrenjacobdev/librestock/adminedititem-scene.fxml
+++ b/src/main/resources/com/shogrenjacobdev/librestock/adminedititem-scene.fxml
@@ -38,7 +38,6 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -53,42 +52,17 @@
       <menus>
         <Menu mnemonicParsing="false" text="File">
           <items>
-            <MenuItem mnemonicParsing="false" text="New" />
-            <MenuItem mnemonicParsing="false" text="Open…" />
-            <Menu mnemonicParsing="false" text="Open Recent" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Close" />
-            <MenuItem mnemonicParsing="false" text="Save" />
-            <MenuItem mnemonicParsing="false" text="Save As…" />
-            <MenuItem mnemonicParsing="false" text="Revert" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Preferences…" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Quit" />
-          </items>
-        </Menu>
-        <Menu mnemonicParsing="false" text="Edit">
-          <items>
-            <MenuItem mnemonicParsing="false" text="Undo" />
-            <MenuItem mnemonicParsing="false" text="Redo" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Cut" />
-            <MenuItem mnemonicParsing="false" text="Copy" />
-            <MenuItem mnemonicParsing="false" text="Paste" />
-            <MenuItem mnemonicParsing="false" text="Delete" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Select All" />
-            <MenuItem mnemonicParsing="false" text="Unselect All" />
+            <MenuItem fx:id="adminedititemquit_menu" mnemonicParsing="false" onAction="#quitAdminEditItemMenuClick" text="Quit" />
           </items>
         </Menu>
         <Menu mnemonicParsing="false" text="Help">
           <items>
-            <MenuItem mnemonicParsing="false" text="About MyHelloApp" />
+            <MenuItem fx:id="adminedititemaboutlibrestock_menu" mnemonicParsing="false" onAction="#openAdminEditItemAboutMenuClick" text="About LibreStock" />
           </items>
         </Menu>
       </menus>
     </MenuBar>
-      <Text fx:id="edititem_label" strokeType="OUTSIDE" strokeWidth="0.0" text="Edit Item">
+      <Text fx:id="edititem_label" strokeType="OUTSIDE" strokeWidth="0.0" text="Admin Edit Item">
          <VBox.margin>
             <Insets left="20.0" top="10.0" />
          </VBox.margin>
@@ -175,17 +149,17 @@
       </HBox>
       <HBox alignment="TOP_RIGHT" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="155.0" prefWidth="510.0">
          <children>
-            <Button fx:id="edititemsubmit_button" mnemonicParsing="false" text="Submit">
+            <Button fx:id="adminedititemsubmit_button" mnemonicParsing="false" onAction="#adminedititemSubmitButtonClick" text="Submit">
                <HBox.margin>
                   <Insets left="10.0" right="10.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="edititemreturn_button" defaultButton="true" mnemonicParsing="false" text="Return">
+            <Button fx:id="adminedititemreturn_button" defaultButton="true" mnemonicParsing="false" onAction="#adminededititemReturnButtonClick" text="Return">
                <HBox.margin>
                   <Insets left="10.0" right="10.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="edititemsearch_button" layoutX="450.0" layoutY="10.0" mnemonicParsing="false" text="Search">
+            <Button fx:id="edititemsearch_button" layoutX="450.0" layoutY="10.0" mnemonicParsing="false" onAction="#adminedititemSearchButtonClick" text="Search">
                <HBox.margin>
                   <Insets left="10.0" right="10.0" />
                </HBox.margin>
