--- a/src/main/resources/com/shogrenjacobdev/librestock/librestockdocs.fxml
+++ b/src/main/resources/com/shogrenjacobdev/librestock/librestockdocs.fxml
@@ -38,40 +38,29 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Text?>
 
-<VBox minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.shogrenjacobdev.librestock.NewItemController">
+<VBox minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.shogrenjacobdev.librestock.AboutLibreStockController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
         <Menu mnemonicParsing="false" text="File">
           <items>
-            <MenuItem fx:id="newitemquit_menu" mnemonicParsing="false" onAction="#quitNewItemMenuClick" text="Quit" />
+            <MenuItem fx:id="aboutlibrestockquit_menu" mnemonicParsing="false" onAction="#quitAboutLibreMenuClick" text="Quit" />
           </items>
         </Menu>
         <Menu mnemonicParsing="false" text="Help">
           <items>
-            <MenuItem fx:id="newitemaboutlibrestock_menu" mnemonicParsing="false" onAction="#openNewItemAboutMenuClick" text="About LibreStock" />
+            <MenuItem fx:id="aboutlibrestockopendocs_menu" mnemonicParsing="false" text="Open Documentation" />
           </items>
         </Menu>
       </menus>
     </MenuBar>
-      <Text fx:id="edititem_label" strokeType="OUTSIDE" strokeWidth="0.0" text="New Item">
-         <VBox.margin>
-            <Insets left="20.0" top="10.0" />
-         </VBox.margin>
-      </Text>
-      <Text fx:id="edititeminstructions_label" strokeType="OUTSIDE" strokeWidth="0.0" text="NOTE: Enter data in the fields, double check that they are correct, and submit to create a new entry in the inventory database. Make sure to include a valid collection name!" wrappingWidth="578.6890258789062">
-         <VBox.margin>
-            <Insets left="40.0" />
-         </VBox.margin>
-      </Text>
       <HBox prefHeight="100.0" prefWidth="200.0">
          <children>
             <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
@@ -79,12 +68,12 @@
                   <Image url="@logo.png" />
                </image>
             </ImageView>
-            <VBox minHeight="-Infinity" prefHeight="300.0" prefWidth="100.0">
+            <VBox prefHeight="200.0" prefWidth="100.0">
                <children>
                   <HBox maxWidth="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="400.0">
                      <children>
-                        <Label fx:id="newitemitemname_label" prefHeight="18.0" prefWidth="102.0" text="Item Name" />
-                        <TextField fx:id="newitemitemname_textfield" prefHeight="26.0" prefWidth="226.0" />
+                        <Label fx:id="docsversionvaluelabel_label" prefHeight="18.0" prefWidth="173.0" text="LibreStock Version:" />
+                        <Label fx:id="docsversionvalue_label" prefHeight="18.0" prefWidth="65.0" text="0.1" />
                      </children>
                      <opaqueInsets>
                         <Insets />
@@ -93,37 +82,31 @@
                         <Insets left="10.0" />
                      </padding>
                   </HBox>
-                  <HBox maxWidth="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="400.0">
+                  <HBox maxWidth="-Infinity" minWidth="-Infinity" prefHeight="343.0" prefWidth="400.0">
                      <children>
-                        <Label fx:id="newitemcollection_label" prefHeight="18.0" prefWidth="102.0" text="Collection" />
-                        <TextField fx:id="newitemcollection_textfield" prefHeight="26.0" prefWidth="227.0" />
+                        <Label fx:id="docsAboutLabel_Label" prefHeight="18.0" prefWidth="160.0" text="About LibreStock:" />
+                        <TextArea fx:id="docsabout_textarea" editable="false" prefHeight="47.0" prefWidth="315.0" text="LibreStock is a free, open source generic inventory management software. This software was developed for submission as a final project in YSU's Software Engineering class. This application will continue to be updated as long as there is an interest in improving features for generic inventory management." wrapText="true" />
                      </children>
                      <padding>
                         <Insets left="10.0" />
                      </padding>
                   </HBox>
-                  <HBox layoutX="20.0" layoutY="90.0" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="400.0">
+                  <HBox maxWidth="-Infinity" minWidth="-Infinity" prefHeight="76.0" prefWidth="450.0">
                      <children>
-                        <Label fx:id="newitemquantity_label" prefHeight="28.0" prefWidth="102.0" text="Quantity" wrapText="true" />
-                        <TextField fx:id="newitemquantity_textfield" prefHeight="26.0" prefWidth="227.0" />
+                        <Button fx:id="docsdocs_button" disable="true" mnemonicParsing="false" onAction="#aboutLibreDocsButtonClick" prefHeight="26.0" prefWidth="242.0" text="Documentation (Coming Soon)" wrapText="true">
+                           <HBox.margin>
+                              <Insets left="10.0" right="10.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button fx:id="docsreturn_button" defaultButton="true" mnemonicParsing="false" onAction="#aboutLibreReturnButtonClick" text="Return to Menu">
+                           <HBox.margin>
+                              <Insets left="10.0" right="10.0" />
+                           </HBox.margin>
+                        </Button>
                      </children>
-                     <padding>
-                        <Insets left="10.0" />
-                     </padding>
-                  </HBox>
-                  <HBox fx:id="newitemsku_label" layoutX="20.0" layoutY="113.0" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="400.0">
-                     <children>
-                        <Label fx:id="edititemquantity_label" prefHeight="18.0" prefWidth="102.0" text="SKU" />
-                        <TextField fx:id="newitemsku_textfield" prefHeight="26.0" prefWidth="227.0" />
-                     </children>
-                     <padding>
-                        <Insets left="10.0" />
-                     </padding>
-                  </HBox>
-                  <HBox layoutX="20.0" layoutY="252.0" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="400.0">
-                     <padding>
-                        <Insets left="10.0" />
-                     </padding>
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
                   </HBox>
                </children>
                <padding>
@@ -137,20 +120,6 @@
          <VBox.margin>
             <Insets left="10.0" top="20.0" />
          </VBox.margin>
-      </HBox>
-      <HBox alignment="TOP_RIGHT" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="155.0" prefWidth="510.0">
-         <children>
-            <Button fx:id="newitemsubmit_button" mnemonicParsing="false" onAction="#newitemSubmitButtonClick" text="Submit">
-               <HBox.margin>
-                  <Insets left="10.0" right="10.0" />
-               </HBox.margin>
-            </Button>
-            <Button fx:id="newitemreturn_button" defaultButton="true" mnemonicParsing="false" onAction="#newitemReturnButtonClick" text="Return">
-               <HBox.margin>
-                  <Insets left="10.0" right="10.0" />
-               </HBox.margin>
-            </Button>
-         </children>
       </HBox>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS" />
   </children>
