--- a/src/main/resources/com/shogrenjacobdev/librestock/userdash-view.fxml
+++ b/src/main/resources/com/shogrenjacobdev/librestock/userdash-view.fxml
@@ -49,6 +49,11 @@
   <children>
     <MenuBar fx:id="userdash_menubar" VBox.vgrow="NEVER">
       <menus>
+            <Menu fx:id="userdashfile" mnemonicParsing="false" text="File">
+               <items>
+            <MenuItem fx:id="userdashquit_menu" mnemonicParsing="false" onAction="#quitUserMenuClick" text="Quit" />
+               </items>
+            </Menu>
         <Menu mnemonicParsing="false" text="Generate Report">
           <items>
             <MenuItem mnemonicParsing="false" text="All Items, A-Z" />
@@ -56,13 +61,11 @@
             <MenuItem mnemonicParsing="false" text="All Collections, ID 1-100" />
             <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem mnemonicParsing="false" text="All Items, Sorted by Quantity" />
-                  <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Quit" />
           </items>
         </Menu>
         <Menu mnemonicParsing="false" text="Help">
           <items>
-            <MenuItem mnemonicParsing="false" text="About MyHelloApp" />
+            <MenuItem fx:id="userdashaboutlibrestock_menu" mnemonicParsing="false" onAction="#openUserAboutMenuClick" text="About LibreStock" />
           </items>
         </Menu>
       </menus>
@@ -90,17 +93,17 @@
                   </HBox>
                   <HBox maxWidth="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="350.0">
                      <children>
-                        <Button fx:id="userdashedititem_button" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="Edit Item" onAction="#editItemButtonClick">
+                        <Button fx:id="userdashedititem_button" mnemonicParsing="false" onAction="#editItemButtonClick" prefHeight="100.0" prefWidth="100.0" text="Edit Item">
                            <HBox.margin>
                               <Insets left="10.0" right="10.0" />
                            </HBox.margin>
                         </Button>
-                        <Button fx:id="userdashnewitem_button" defaultButton="true" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="New Item" onAction="#newItemButtonClick">
+                        <Button fx:id="userdashnewitem_button" defaultButton="true" mnemonicParsing="false" onAction="#newItemButtonClick" prefHeight="100.0" prefWidth="100.0" text="New Item">
                            <HBox.margin>
                               <Insets left="10.0" right="10.0" />
                            </HBox.margin>
                         </Button>
-                        <Button fx:id="userdashlogout_button" layoutX="114.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="Log Out" onAction="#onLogoutButtonClick">
+                        <Button fx:id="userdashlogout_button" layoutX="114.0" layoutY="10.0" mnemonicParsing="false" onAction="#onLogoutButtonClick" prefHeight="100.0" prefWidth="100.0" text="Log Out">
                            <HBox.margin>
                               <Insets left="10.0" right="10.0" />
                            </HBox.margin>
