--- a/src/main/resources/com/shogrenjacobdev/librestock/editcollection-scene.fxml
+++ b/src/main/resources/com/shogrenjacobdev/librestock/editcollection-scene.fxml
@@ -38,6 +38,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -52,6 +53,8 @@
       <menus>
         <Menu mnemonicParsing="false" text="File">
           <items>
+                  <MenuItem fx:id="editcollectionnew_menu" mnemonicParsing="false" onAction="#newEditCollectionMenuClick" text="New" />
+                  <SeparatorMenuItem mnemonicParsing="false" />
             <MenuItem fx:id="editcollectionquit_menu" mnemonicParsing="false" onAction="#quitEditCollectionMenuClick" text="Quit" />
           </items>
         </Menu>
