Fixed a lot of UI/UX bugs
Added search buttons to keep functionality consistent between different views, fixed a few "new" menu options to also enable fields to prevent softlock. Replaced password textfield on login scene with password_field to obscure credentials when logging in.

--- a/src/main/resources/com/shogrenjacobdev/librestock/edititem-scene.fxml
+++ b/src/main/resources/com/shogrenjacobdev/librestock/edititem-scene.fxml
@@ -152,7 +152,7 @@
       </HBox>
       <HBox alignment="TOP_RIGHT" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="155.0" prefWidth="510.0">
          <children>
-            <Button fx:id="edititemsubmit_button" mnemonicParsing="false" onAction="#ititemSubmitButtonClick" text="Submit">
+            <Button fx:id="edititemsubmit_button" mnemonicParsing="false" onAction="#edititemSubmitButtonClick" text="Submit">
                <HBox.margin>
                   <Insets left="10.0" right="10.0" />
                </HBox.margin>
