--- a/src/main/resources/com/shogrenjacobdev/librestock/editcollection-scene.fxml
+++ b/src/main/resources/com/shogrenjacobdev/librestock/editcollection-scene.fxml
@@ -141,6 +141,11 @@
       </HBox>
       <HBox alignment="TOP_RIGHT" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="155.0" prefWidth="510.0">
          <children>
+            <Button fx:id="editcollectionsearch_button" mnemonicParsing="false" onAction="#editcolsearchButtonClick" text="Search">
+               <HBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </HBox.margin>
+            </Button>
             <Button fx:id="editcollectionsubmit_button" mnemonicParsing="false" onAction="#editcolsubmitButtonClick" text="Submit">
                <HBox.margin>
                   <Insets left="10.0" right="10.0" />
