--- a/src/main/resources/com/shogrenjacobdev/librestock/edituser-scene.fxml
+++ b/src/main/resources/com/shogrenjacobdev/librestock/edituser-scene.fxml
@@ -170,6 +170,11 @@
       </HBox>
       <HBox alignment="TOP_RIGHT" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="155.0" prefWidth="510.0">
          <children>
+            <Button fx:id="editusersearch_button" mnemonicParsing="false" onAction="#editusersearchButtonClick" text="Search">
+               <HBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </HBox.margin>
+            </Button>
             <Button fx:id="editusersubmit_button" mnemonicParsing="false" onAction="#editusersubmitButtonClick" text="Submit">
                <HBox.margin>
                   <Insets left="10.0" right="10.0" />
