--- a/src/main/resources/com/shogrenjacobdev/librestock/login-scene.fxml
+++ b/src/main/resources/com/shogrenjacobdev/librestock/login-scene.fxml
@@ -38,6 +38,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -85,7 +86,7 @@
                   <HBox maxWidth="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="400.0">
                      <children>
                         <Label fx:id="loginpassword_label" prefHeight="18.0" prefWidth="102.0" text="Password" />
-                        <TextField fx:id="loginpassword_textfield" prefHeight="26.0" prefWidth="227.0" />
+                        <PasswordField fx:id="loginpassword_textfield" prefHeight="26.0" prefWidth="226.0" />
                      </children>
                      <padding>
                         <Insets left="10.0" />
