Added documentation view, tweaked other views
Documentation view is complete, I also revamped a lot of the UI instructions to align with what the documentation says

--- a/src/main/resources/com/shogrenjacobdev/librestock/admindash-view.fxml
+++ b/src/main/resources/com/shogrenjacobdev/librestock/admindash-view.fxml
@@ -54,28 +54,16 @@
               </items>
             </Menu>
         <Menu mnemonicParsing="false" text="Generate Report">
-    <items>
-         <MenuItem fx:id="reportItemsAZMenu"
-                  mnemonicParsing="false"
-                  text="All Items, A-Z"
-                  onAction="#onReportItemsAZ"/>
-
-                  <SeparatorMenuItem mnemonicParsing="false"/>
-
-                  <MenuItem fx:id="reportCollectionsIdMenu"
-                     mnemonicParsing="false"
-                     text="All Collections, ID 1-100"
-                     onAction="#onReportCollectionsIdRange"/>
-
-                  <SeparatorMenuItem mnemonicParsing="false"/>
-
-                  <MenuItem fx:id="reportItemsByQtyMenu"
-                     mnemonicParsing="false"
-                     text="All Items, Sorted by Quantity"
-                     onAction="#onReportItemsByQuantity"/>
-               </items>
-         </Menu>
-
+          <items>
+            <MenuItem mnemonicParsing="false" text="All Items, A-Z" />
+            <SeparatorMenuItem mnemonicParsing="false" />
+            <MenuItem mnemonicParsing="false" text="All Collections, ID 1-100" />
+            <SeparatorMenuItem mnemonicParsing="false" />
+                  <MenuItem mnemonicParsing="false" text="All Items, Sorted by Quantity" />
+                  <SeparatorMenuItem mnemonicParsing="false" />
+            <MenuItem mnemonicParsing="false" text="Quit" />
+          </items>
+        </Menu>
             <Menu mnemonicParsing="false" text="Item Options">
                <items>
                   <MenuItem fx:id="adminnewitem_menu" mnemonicParsing="false" onAction="#adminNewItemMenuClick" text="New Item" />
