--- a/src/main/resources/com/shogrenjacobdev/librestock/admindeleteitem-scene.fxml
+++ b/src/main/resources/com/shogrenjacobdev/librestock/admindeleteitem-scene.fxml
@@ -163,12 +163,12 @@
       </HBox>
       <HBox alignment="TOP_RIGHT" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="155.0" prefWidth="510.0">
          <children>
-            <Button fx:id="admindeleteitemreturn_button" mnemonicParsing="false" onAction="#admindelitemreturnButtonClick" text="Return">
+            <Button fx:id="admindeleteitemreturn_button" defaultButton="true" mnemonicParsing="false" onAction="#admindelitemreturnButtonClick" text="Return">
                <HBox.margin>
                   <Insets left="10.0" right="10.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="admindeleteitemdelete_button" defaultButton="true" mnemonicParsing="false" onAction="#admindelitemsubmitButtonClick" text="DELETE">
+            <Button fx:id="admindeleteitemdelete_button" mnemonicParsing="false" onAction="#admindelitemsubmitButtonClick" text="DELETE">
                <HBox.margin>
                   <Insets left="10.0" right="10.0" />
                </HBox.margin>
