--- a/src/main/resources/com/shogrenjacobdev/librestock/deletecollection-scene.fxml
+++ b/src/main/resources/com/shogrenjacobdev/librestock/deletecollection-scene.fxml
@@ -163,12 +163,12 @@
       </HBox>
       <HBox alignment="TOP_RIGHT" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="155.0" prefWidth="510.0">
          <children>
-            <Button fx:id="deletecollectionreturn_button" mnemonicParsing="false" onAction="#delcolreturnButtonClick" text="Return">
+            <Button fx:id="deletecollectionreturn_button" defaultButton="true" mnemonicParsing="false" onAction="#delcolreturnButtonClick" text="Return">
                <HBox.margin>
                   <Insets left="10.0" right="10.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="deletecollectiondelete_button" defaultButton="true" mnemonicParsing="false" onAction="#delcolsubmitButtonClick" text="DELETE">
+            <Button fx:id="deletecollectiondelete_button" mnemonicParsing="false" onAction="#delcolsubmitButtonClick" text="DELETE">
                <HBox.margin>
                   <Insets left="10.0" right="10.0" />
                </HBox.margin>
